--- a/examples/friends-list-react/package.json
+++ b/examples/friends-list-react/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "beta",
+    "@xstate/react": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "xstate": "^5.4.1"
