--- a/examples/tiles/package.json
+++ b/examples/tiles/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@xstate/react": "beta",
+    "@xstate/react": "^4.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "xstate": "^5.4.1"
@@ -19,6 +19,6 @@
     "@types/react-dom": "^18.2.18",
     "@vitejs/plugin-react": "^3.1.0",
     "typescript": "^4.9.5",
-    "vite": "^4.5.1"
+    "vite": "^5.0.11"
   }
 }
