--- a/templates/vanilla-ts/package.json
+++ b/templates/vanilla-ts/package.json
@@ -10,9 +10,9 @@
   },
   "devDependencies": {
     "typescript": "^5.3.3",
-    "vite": "^4.5.1"
+    "vite": "^5.0.11"
   },
   "dependencies": {
-    "xstate": "5.0.0-beta.53"
+    "xstate": "5.4.1"
   }
 }
