--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -36,23 +36,23 @@
     "url": "https://github.com/statelyai/xstate/issues"
   },
   "dependencies": {
-    "@testing-library/react": "^14.2.1",
-    "use-sync-external-store": "^1.2.0"
+    "xstate": "^5.9.1"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.1",
     "immer": "^10.0.2",
-    "react": "^18.0.0",
-    "xstate": "^5.8.2"
+    "react": "^18.0.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
+    "use-sync-external-store": "^1.2.0",
     "xstate": "^5.8.2"
   },
   "peerDependenciesMeta": {
-    "xstate": {
+    "react": {
       "optional": true
     },
-    "react": {
+    "use-sync-external-store": {
       "optional": true
     }
   },
