--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -41,7 +41,8 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.1",
     "immer": "^10.0.2",
-    "react": "^18.0.0"
+    "react": "^18.0.0",
+    "use-sync-external-store": "^1.2.0"
   },
   "peerDependencies": {
     "react": "^18.2.0",
