--- a/examples/7guis-flight-booker-react/package.json
+++ b/examples/7guis-flight-booker-react/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "vite-tsconfig-paths": "^4.3.2",
-    "xstate": "^5.9.1"
+    "xstate": "^5.9.1",
+    "vitest": "^1.6.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -33,7 +34,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vitest": "^1.5.0"
+    "vite": "^5.2.0"
   }
 }
