--- a/examples/7guis-flight-booker-react/package.json
+++ b/examples/7guis-flight-booker-react/package.json
@@ -19,7 +19,9 @@
     "xstate": "^5.9.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.0",
     "@types/jest": "^29.5.12",
+    "@types/node": "^20.12.10",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
