--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "markdown-it-codesandbox-embed": "^0.1.0",
     "patch-package": "^6.5.1",
     "prettier": "^3.1.0",
+    "prettier-plugin-jsdoc": "^1.3.0",
     "spawn-command": "0.0.2-1",
     "synckit": "^0.8.5",
     "tslib": "^2.3.1",
