--- a/.knip.jsonc
+++ b/.knip.jsonc
@@ -6,7 +6,8 @@
     // used for `#is-development` conditional import
     "packages/**/{true,false}.ts",
     // file acts as a type test
-    "packages/xstate-svelte/test/interpreterAsReadable.svelte"
+    "packages/xstate-svelte/test/interpreterAsReadable.svelte",
+    "scripts/{typecheck-examples,update-example-*}.js"
   ],
   "ignoreDependencies": [
     "@tsconfig/svelte",
