--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "patch-package": "^6.5.1",
     "prettier": "^3.1.0",
     "prettier-plugin-jsdoc": "^1.3.0",
+    "svelte-jester": "^2.3.2",
     "synckit": "^0.8.5",
     "typescript": "^5.4.2",
     "vue": "^3.0.11"
