--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "build": "preconstruct build",
     "fix": "manypkg fix",
     "typecheck": "tsc",
-    "test": "jest",
-    "test:core": "jest packages/core",
+    "test": "vitest",
+    "test:core": "vitest packages/core",
     "changeset": "changeset",
     "release": "changeset publish",
     "version": "changeset version && node ./scripts/bump-peer-dep-ranges.js"
@@ -78,6 +78,7 @@
     "svelte-jester": "^2.3.2",
     "synckit": "^0.8.5",
     "typescript": "^5.5.4",
+    "vitest": "^2.0.3",
     "vue": "^3.0.11"
   },
   "husky": {
