--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "jsx": "react-jsx",
     "lib": ["es2019", "ESNext.Promise", "dom"],
     "strict": true,
-    "stripInternal": true
+    "stripInternal": true,
+    "types": ["vitest/globals"]
   },
   "exclude": ["examples", "templates"]
 }
