--- a/packages/xstate-store/package.json
+++ b/packages/xstate-store/package.json
@@ -45,11 +45,9 @@
   "bugs": {
     "url": "https://github.com/statelyai/xstate/issues"
   },
-  "dependencies": {
-    "use-sync-external-store": "^1.2.0"
-  },
   "devDependencies": {
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/react": "^16.0.0",
+    "@types/react": "^18.3.3",
     "@xstate/react": "^4.1.1",
     "@xstate/vue": "^3.1.2",
     "immer": "^10.0.2",
