--- a/package.json
+++ b/package.json
@@ -56,11 +56,8 @@
     "@manypkg/cli": "^0.16.1",
     "@manypkg/get-packages": "^1.1.3",
     "@preconstruct/cli": "^2.8.1",
-    "@testing-library/vue": "^6.6.1",
     "@types/jest": "^29.5.10",
     "@types/node": "^20.14.13",
-    "@vue/compiler-sfc": "^3.0.11",
-    "@vue/vue3-jest": "^29.2.6",
     "babel-jest": "^29.7.0",
     "babel-preset-solid": "^1.8.4",
     "happy-dom": "^14.12.3",
@@ -78,8 +75,7 @@
     "prettier-plugin-jsdoc": "^1.3.0",
     "synckit": "^0.8.5",
     "typescript": "^5.5.4",
-    "vitest": "^2.0.3",
-    "vue": "^3.0.11"
+    "vitest": "^2.0.3"
   },
   "husky": {
     "hooks": {
