--- a/.github/actions/ci-checks/action.yml
+++ b/.github/actions/ci-checks/action.yml
@@ -17,3 +17,7 @@ runs:
     - name: Svelte Check
       run: yarn --cwd packages/xstate-svelte svelte-check
       shell: bash
+
+    - name: Knip
+      run: yarn knip
+      shell: bash
